# lily

./: .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  README.md  cabal.project  hie.yaml  inline-c.nix  lily.cabal  lily.nix  pinned-nixpkgs.nix  release.nix  shell.nix
.github/workflows/: cabal.yml  nix.yml
app/: Main.hs
examples/: assign.cpp  doublemove.cpp  empty.cpp  forloop.cpp  ignore.cpp  konst.cpp  mutuallyrecursive.cpp  reborrowassign.cpp  recursive.cpp  struct.cpp  useafterfree.cpp  various.cpp
nix/: sources.json
src/: Assumption.hs  Clang.hs  ClangType.hs  Error.hs  Infer.hs  Lily.hs  Lint.hs  MonadFresh.hs  Name.hs  Options.hs  SimplifyType.hs  Solve.hs  Type.hs  Unify.hs
src/Clang/: AST.hs  Function.hs  MemberParser.hs  OpParser.hs  Struct.hs  Type.hs
src/Control/Monad/: Fresh.hs
src/Core/: Desugar.hs  Elaboration.hs  Located.hs  Syntax.hs
src/Debug/Trace/: Pretty.hs
src/Type/: Assumption.hs  Class.hs  Constraint.hs  Fresh.hs  Infer.hs  Simplify.hs  Solve.hs  Type.hs  Unify.hs
test/: Spec.hs
