cabal-version:       2.4

name:                lily
version:             0.1.0.0
synopsis:            C++ linter based on linear types
description:         C++ linter based on linear types
license:             NONE
author:              Jiří Beneš
maintainer:          Jiří Beneš <mail@jiribenes.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:         GHC == 8.8.3
                     -- TODO: GHC == 8.10.1

source-repository head
  type:             git
  location:         https://github.com/jiribenes/lily.git

common common-options
  build-depends:       base >= 4.13 && < 4.14, clang-pure >= 0.2.1.0, lens, containers, unordered-containers, bytestring, mtl, transformers, text, prettyprinter, optparse-applicative, directory
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Lily, Options
  other-modules:       Control.Monad.Fresh, 
                       Control.Lens.NonEmpty, 
                       Clang, Clang.AST, Clang.Function, Clang.OpParser, Clang.Type, Clang.Struct, Clang.MemberParser,
                       Type.Infer, Type.Solve, Type.Unify, Type.Assumption, Type.Type, Type.Simplify, Type.Constraint, Type.Fresh, Type.Class,
                       Error, 
                       Core.Elaboration, Core.Syntax, Core.Located, 
                       Name,
                       Lint,
                       Debug.Trace.Pretty

executable lily
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       lily
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
test-suite lily-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       lily
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
